--- a/readme
+++ b/readme
@@ -1,28 +1,62 @@
+## Installation Guide
 
+This guide will walk you through the process of installing the required dependencies for using a specific set of Python libraries, including Tesseract for text recognition. These libraries are commonly used for working with PDFs, images, text recognition, and office document formats. To begin, make sure you have administrative privileges on your system to install software and modify environment variables.
 
+### Step 1: Install Poppler
 
-OCR Script for Text Extraction and Handling
-===========================================
+**Poppler** is a PDF rendering library that is required for certain PDF manipulation tasks.
 
-This script is designed to process various types of documents, including PDFs, images (JPG, JPEG, PNG), TXT files, and DOCX files. It uses OCR (Optical Character Recognition) to extract text from images and non-selectable PDFs.
+1. **For Windows:**
+   - Download the latest Poppler's Windows release from the official repository [here](https://github.com/oschwartz10612/poppler-windows/releases/tag/v21.03.0).
+   - After downloading, extract the contents of the archive to a preferred directory.
+   - Copy the path of the `bin` directory within the extracted folder.
 
-Prerequisites
--------------
-1. Install Tesseract OCR: Make sure you have Tesseract OCR installed on your system. You can download it from https://github.com/tesseract-ocr/tesseract.
-Install tesseract : https://github.com/UB-Mannheim/tesseract/wiki
-(enable environment in terminal)
-2. Python Dependencies: Install the required Python packages by running the following command in your terminal or command prompt:
-pip install PyPDF2 pytesseract Pillow pdf2image python-docx 
-3. Run the script
-Processed documents will be saved in the "OutputAfterOCR" folder. If a document has selectable text, a TXT file with the extracted text will be created. If not,  a txt will be created using OCR.
+### Step 2: Add Poppler to PATH
 
-4. Languages: The script is set to extract text in the French language by default. You can change the language by modifying the `ocr_image` function in the script. Don't forget to download the package when installing (1.)
+Adding the Poppler binary directory to your system's PATH environment variable will allow your system to locate and execute the Poppler command-line tools.
 
-5. Text Formatting: The script preserves interword spaces and separates paragraphs with two newlines.
+1. **For Windows:**
+   - Right-click on the "This PC" or "My Computer" icon (or search for "Computer" in the Start menu), and select "Properties."
+   - Click on "Advanced system settings."
+   - In the "System Properties" window, click the "Environment Variables" button.
+   - Under the "System Variables" section, find and select the "Path" variable, then click the "Edit" button.
+   - Click "New" and paste the copied path to the Poppler `bin` directory.
+   - Click "OK" on all the windows to save your changes.
 
-Note: This script uses PyPDF2 to handle PDFs. As of version 3.0.0, PdfFileReader is deprecated in favor of PdfReader.
+### Step 3: Install Tesseract OCR
 
-Contact
--------
-If you have any questions or encounter issues, please contact [Your Name] at [Your Email].
+**Tesseract** is an open-source text recognition engine.
 
+1. **For Windows:**
+   - Download the Tesseract installer for Windows from the official repository [here](https://github.com/UB-Mannheim/tesseract/wiki).
+   - Run the installer and follow the installation instructions.
+   - During installation, make sure to select the option to add Tesseract to the system PATH.
+
+### Step 4: Install Python Packages
+
+The following Python packages are essential for working with various document formats and performing text recognition.
+
+1. Open a command prompt or terminal window.
+
+2. Run the following command to install the required Python packages using pip:
+
+   ```bash
+   pip install PyPDF2 Pillow pytesseract pdf2image python-docx openpyxl python-pptx
+   ```
+
+### Congratulations!
+
+You have successfully installed the necessary dependencies for your project, including Tesseract for text recognition. You can now start using the installed Python libraries to work with PDFs, images, text recognition, and various office document formats.
+
+Remember to refer to the documentation of each library for guidance on how to use their features effectively in your Python scripts.
+
+For specific examples and usage instructions, refer to the official documentation of the respective libraries:
+- [PyPDF2](https://pythonhosted.org/PyPDF2/)
+- [Pillow](https://pillow.readthedocs.io/en/stable/index.html)
+- [pytesseract](https://github.com/madmaze/pytesseract)
+- [pdf2image](https://github.com/Belval/pdf2image)
+- [python-docx](https://python-docx.readthedocs.io/en/latest/)
+- [openpyxl](https://openpyxl.readthedocs.io/en/stable/)
+- [python-pptx](https://python-pptx.readthedocs.io/en/latest/)
+
+Happy coding! If you encounter any issues, refer to the troubleshooting sections in the respective libraries' documentation or seek help from the developer communities.
